[metadata]
version = attr: cod_api.__version__
description-file = README.rst
url = https://codapi.dev/
project_urls =
    Source Code = https://github.com/TodoLodo2089/cod-python-api
    Issue Tracker = https://github.com/TodoLodo2089/cod-python-api/issues
license = GPL-3.0
author = Todo Lodo
author_email = me@todolodo.xyz
maintainer = Engineer15
maintainer_email = engineergamer15@gmail.com
description = Call Of Duty API.
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python